# Change log for DateTime::Format::Builder

---
version: 0.76
date:    17 Jul 2003
changes:
    - Fallthrough example and test added.
    - Quick parser added to simplify fallthrough stuff.

---
version: 0.75
date:    29 Jun 2003
changes:
    - Silly MANIFEST.SKIP entry caused dispatch stuff to be skipped.

---
version: 0.74
date:    28 Jun 2003
changes:
    - >
      Dispatch Parser class added, which allows us to make
      groups of parsers and hop quickly to them.
    - >
      length parameter can now be an arrayref, hence we can
      have a parser belong to more than one length group.
    - Version numbers are all identical now.
    - Regex Parser can call custom constructors.
    - Wrapped method only regards undef as a failure.

---
version: 0.73
date:    24 Jun 2003
changes:
    - Exit parser more quickly if able.
    - Multiple same length parsers accepted.
    - Fixed some perl 5.005 testing problems.

---
version: 0.72
date:    28 May 2003
changes:
    - Minor tweaks for the 'private' tag in META.yml

---
version: 0.71
date:    23 May 2003
changes:
    - Massive doc (re)writing.
    - Examples tidied up.
    - Tutorial refactored.
    - Users of generic.pm get to subclass now rather than coderef.

---
version: 0.69
date:    28 Apr 2003
changes:
    - DateTime::Format::Strptime is now supported.
    - To support the previous item, massive refactoring.
    - Minor API changes that shouldn't affect anyone.

---
version: 0.64
date:    27 Apr 2003
changes:
    - Callbacks are given 'args' and 'self' keys.
    - Callbacks can be arrays of callbacks.

---
version: 0.62
date:    20 Apr 2003
changes:
    - Fixed erroneous call to on_fail()
    - Added 'verbose' debugging capability.
    - Added 'constructor' option to create_class/import.
    - Avoid overwriting developers' own new() functions.
    - Complain if asked to overwrite methods.

---
version: 0.60
date:    12 Apr 2003
changes:
    - Fixed missing '\' from a few '\d' in the docs.