@@ -4,7 +4,11 @@ use blib;
 use strict;
 use Module::Versions::Report qw();
 use Test::More tests => 5;
-END { diag '', Module::Versions::Report::report() }
+use Sys::Hostname;
+END {
+    my $host = hostname();
+    diag '', Module::Versions::Report::report() if $host !~ /\.anu\.edu\.au/;
+}
 
 BEGIN {
     use_ok 'DateTime::Format::Builder';
